--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "@storybook/addon-links": "^6.0.21",
         "@storybook/node-logger": "^6.0.21",
         "@storybook/react": "^6.0.21",
+        "@togglecorp/toggle-ui": "^0.9.0",
         "@types/node": "^14.11.2",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
