--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@togglecorp/toggle-form",
-    "version": "0.1.1",
+    "version": "0.2.0-beta.0",
     "description": "React form library by Togglecorp",
     "files": [
         "/build"
