Revert change to outFile on tsconfig

--- a/tsconfig-typings.json
+++ b/tsconfig-typings.json
@@ -4,7 +4,7 @@
         "noEmit": false,
         "emitDeclarationOnly": true,
         "declaration": true,
-        "outFile": "./build/index",
+        "outDir": "./build",
         "baseUrl": "./src"
     },
     "include": ["./src/index.ts", "./src/declarations"]
