--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@togglecorp/toggle-form",
-    "version": "1.0.0-beta.0",
+    "version": "1.0.0",
     "description": "React form library by Togglecorp",
     "files": [
         "/build"
