--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@togglecorp/toggle-form",
-    "version": "1.2.1",
+    "version": "1.2.2-beta.1",
     "description": "React form library by Togglecorp",
     "files": [
         "/build"
