--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "prepack": "yarn build",
         "watch": "rollup -c -w",
         "typecheck": "tsc",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
         "lint": "eslint 'src/**/*.[tj]s?(x)'",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
@@ -70,12 +72,14 @@
         "@storybook/node-logger": "^6.0.21",
         "@storybook/react": "^6.0.21",
         "@togglecorp/toggle-ui": "^0.10.1",
+        "@types/jest": "^27.4.1",
         "@types/node": "^14.11.2",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
         "@types/react-router-dom": "^5.1.5",
         "@typescript-eslint/eslint-plugin": "^4.2.0",
         "@typescript-eslint/parser": "^4.2.0",
+        "babel-jest": "^27.5.1",
         "babel-loader": "^8.1.0",
         "babel-plugin-dynamic-import-node": "^2.3.3",
         "babel-plugin-module-resolver": "^4.0.0",
@@ -91,6 +95,7 @@
         "eslint-plugin-react": "^7.20.6",
         "eslint-plugin-react-hooks": "^4.1.2",
         "install-peers-cli": "^2.2.0",
+        "jest": "^27.5.1",
         "path": "^0.12.7",
         "postcss-loader": "^3.0.0",
         "postcss-nested": "^4.2.3",
