Pass base value and context to accumulateValue as well

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
         "baseUrl": ".",
         "paths": {}
     },
-    "exclude": ["node_modules", "build", "coverage", "**/*.test.ts"]
+    "exclude": ["node_modules", "build", "coverage", "**/*.test.ts"],
     "include": ["./src/index.ts", "./src/stories", "./src/declarations"]
 }
