--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
     "name": "@togglecorp/toggle-form",
-    "version": "1.3.0-beta.2",
+    "version": "2.0.0",
     "description": "React form library by Togglecorp",
     "files": [
         "/build"
     ],
-    "sideEffect": [
+    "sideEffects": [
         "src/styles.css"
     ],
-    "main": "build/index.js",
-    "module": "build/index.es.js",
-    "style": "build/index.css",
-    "typings": "build/index.d.ts",
+    "main": "build/cjs/index.js",
+    "module": "build/esm/index.es.js",
+    "style": "build/esm/index.css",
+    "typings": "build/esm/index.d.ts",
     "scripts": {
         "prepare": "install-peers",
         "build": "rollup -c && tsc --project tsconfig-typings.json",
         "prepack": "yarn build",
         "watch": "rollup -c -w",
         "typecheck": "tsc",
+        "check-unused": "unimported",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "lint": "eslint 'src/**/*.[tj]s?(x)'",
@@ -113,6 +114,7 @@
         "stylelint": "^13.7.0",
         "stylelint-config-concentric": "^2.0.2",
         "stylelint-config-recommended": "^3.0.0",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.3",
+        "unimported": "^1.22.0"
     }
 }
