--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
-
 # production
-/build
+build/
+storybook-static/
 
 # misc
 .DS_Store
@@ -23,4 +21,3 @@ yarn-debug.log*
 yarn-error.log*
 
 build-storybook.log*
-storybook-static/
