Enable defaultValue and forceValue on object and array schema
- Run required validation if field changed or there was already an error
  previously
- Update react version
- Update how we build library

--- a/lib/.babelrc
+++ b/lib/.babelrc
@@ -1,15 +1,13 @@
 {
-    'presets': [
-        '@babel/preset-env',
-        '@babel/preset-typescript',
-        '@babel/preset-react',
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-typescript",
+        "@babel/preset-react"
     ],
-
-    'plugins': [
-        '@babel/plugin-transform-runtime',
-
-        ['polyfill-corejs3', {
-            "method": "usage-pure",
-        }],
-    ],
+    "plugins": [
+        "@babel/plugin-transform-runtime",
+        ["polyfill-corejs3", {
+            "method": "usage-pure"
+        }]
+    ]
 }
