--- a/lib/package.json
+++ b/lib/package.json
@@ -5,12 +5,13 @@
     "files": [
         "/build"
     ],
+    "type": "module",
     "main": "build/cjs/index.js",
     "module": "build/esm/index.js",
     "typings": "build/esm/index.d.ts",
     "scripts": {
         "prepare": "install-peers",
-        "build": "tsc --project tsconfig-typings.json && rollup -c",
+        "build": "rollup -c && tsc --project tsconfig-typings.json",
         "watch": "rollup -c -w",
         "prepack": "yarn build",
         "typecheck": "tsc",
@@ -29,44 +30,44 @@
         "url": "https://github.com/toggle-corp/toggle-form/issues"
     },
     "homepage": "https://github.com/toggle-corp/toggle-form#readme",
-    "peerDependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    },
     "dependencies": {
-        "@babel/runtime": "^7.19.0",
+        "@babel/runtime-corejs3": "^7.22.3",
         "@togglecorp/fujs": "^2.0.0"
     },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
     "devDependencies": {
-        "@babel/core": "^7.19.1",
-        "@babel/plugin-transform-runtime": "^7.19.1",
-        "@babel/preset-env": "^7.19.1",
-        "@babel/preset-react": "^7.18.6",
-        "@babel/preset-typescript": "^7.18.6",
-        "@rollup/plugin-babel": "^5.3.1",
-        "@rollup/plugin-commonjs": "^22.0.2",
-        "@rollup/plugin-eslint": "^8.0.1",
-        "@rollup/plugin-node-resolve": "^14.1.0",
-        "@types/jest": "^29.0.3",
-        "@types/node": "^18.7.22",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "@typescript-eslint/eslint-plugin": "^5.59.8",
-        "@typescript-eslint/parser": "^5.59.8",
-        "babel-jest": "^29.0.3",
-        "babel-plugin-polyfill-corejs3": "^0.6.0",
-        "eslint": "^8.24.0",
+        "@babel/core": "^7.22.8",
+        "@babel/plugin-transform-runtime": "^7.22.7",
+        "@babel/preset-env": "^7.22.7",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@rollup/plugin-babel": "^6.0.3",
+        "@rollup/plugin-commonjs": "^25.0.2",
+        "@rollup/plugin-eslint": "^9.0.4",
+        "@rollup/plugin-node-resolve": "^15.1.0",
+        "@types/jest": "^29.5.2",
+        "@types/node": "^20.4.1",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
+        "@typescript-eslint/eslint-plugin": "^5.61.0",
+        "@typescript-eslint/parser": "^5.61.0",
+        "babel-jest": "^29.6.1",
+        "babel-plugin-polyfill-corejs3": "^0.8.2",
+        "eslint": "^8.44.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "install-peers-cli": "^2.2.0",
-        "jest": "^29.0.3",
-        "rollup": "^2.79.1",
+        "jest": "^29.6.1",
+        "rollup": "^3.26.2",
         "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-filesize": "^9.1.2",
-        "typescript": "^5.0.4",
-        "unimported": "^1.22.0"
+        "rollup-plugin-filesize": "^10.0.0",
+        "typescript": "^5.1.6",
+        "unimported": "^1.29.2"
     }
 }
