--- a/storybook/package.json
+++ b/storybook/package.json
@@ -2,6 +2,7 @@
     "name": "@togglecorp/toggle-form-storybook",
     "version": "1.0.0",
     "description": "",
+    "main": "index.js",
     "scripts": {
         "typecheck": "tsc",
         "lint": "eslint ./stories --report-unused-disable-directives",
@@ -13,14 +14,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@togglecorp/fujs": "^1.9.3",
+        "@togglecorp/fujs": "^2.0.0",
         "@togglecorp/toggle-form": "^2.0.3",
         "@togglecorp/toggle-ui": "^0.15.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.19.3",
+        "@babel/core": "^7.22.8",
         "@storybook/addon-actions": "^6.5.12",
         "@storybook/addon-essentials": "^6.5.12",
         "@storybook/addon-interactions": "^6.5.12",
@@ -28,16 +29,16 @@
         "@storybook/builder-vite": "^0.2.3",
         "@storybook/react": "^6.5.12",
         "@storybook/testing-library": "^0.0.13",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "@typescript-eslint/eslint-plugin": "^5.59.8",
-        "@typescript-eslint/parser": "^5.59.8",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
+        "@typescript-eslint/eslint-plugin": "^5.61.0",
+        "@typescript-eslint/parser": "^5.61.0",
         "babel-loader": "^8.2.5",
-        "eslint": "^8.24.0",
+        "eslint": "^8.44.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "postcss-nested": "^6.0.0",
         "postcss-normalize": "^10.0.1",
@@ -45,7 +46,7 @@
         "stylelint": "^14.13.0",
         "stylelint-config-concentric": "^2.0.2",
         "stylelint-config-recommended": "^9.0.0",
-        "typescript": "^5.0.4",
+        "typescript": "^5.1.6",
         "unimported": "^1.22.0",
         "vite": "^3.1.6"
     }
